// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders correctly 1`] = `
<DocumentFragment>
  <script
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"HowTo","steps":[{"@type":"HowToStep","text":"Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.To learn more, see Connect to MongoDB","name":"Connect to your deployment"},{"@type":"HowToStep","text":"Import data from CSV or JSON files into your MongoDB database.To learn more, see Import and Export Data","name":"Import your data"}],"name":"Connect to a MongoDB deployment hosted on MongoDB Atlas","image":"https://webimages.mongodb.com/_com_assets/cms/kuyj2focmkbxv7gh3-stacked_default_slate_blue.svg?auto=format%252Ccompress"}
  </script>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-1 {
  position: relative;
  gap: 33px;
}

.emotion-1 h2,
.emotion-1 h3,
.emotion-1 h4 {
  margin-top: 4px;
}

.emotion-1:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-1:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-4 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          <a
            class="link"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          <a
            class="link"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders steps nested in include nodes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-1 {
  position: relative;
  gap: 33px;
}

.emotion-1 h2,
.emotion-1 h3,
.emotion-1 h4 {
  margin-top: 4px;
}

.emotion-1:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-1:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-4 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-column-gap: 5px;
  column-gap: 5px;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 32px;
  line-height: 40px;
  font-weight: 400;
  font-family: 'MongoDB Value Serif','Times New Roman',serif;
  color: #00684A;
  margin-top: 24px;
  margin-bottom: 8px;
  color: var(--heading-color-primary);
  margin-top: 16px;
  margin-bottom: 24px;
}

.emotion-10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
  min-width: 175px;
}

.emotion-10 [data-theme] {
  width: 310px;
  margin-left: -100px;
}

@media only screen and (max-width: 1024px) {
  .emotion-10 {
    display: none;
  }
}

.emotion-11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 28px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  z-index: 1;
}

.emotion-11:focus-visible,
.emotion-11[data-focus="true"] {
  outline: none;
}

.emotion-11:active,
.emotion-11[data-active="true"],
.emotion-11:focus,
.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:focus-visible,
.emotion-11[data-focus="true"] {
  color: #001E2B;
}

.emotion-11:hover,
.emotion-11[data-hover="true"],
.emotion-11:active,
.emotion-11[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-11:focus-visible,
.emotion-11[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-11,
.emotion-11:hover,
.emotion-11:focus,
.emotion-11:focus-visible,
.emotion-11:active {
  border-right-color: #889397;
}

.emotion-12 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-13 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-14 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #889397;
  height: 16px;
  width: 16px;
  justify-self: right;
}

.emotion-15 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 28px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  margin-left: -1px;
  width: 32px;
}

.emotion-15:focus-visible,
.emotion-15[data-focus="true"] {
  outline: none;
}

.emotion-15:active,
.emotion-15[data-active="true"],
.emotion-15:focus,
.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15:focus-visible,
.emotion-15[data-focus="true"] {
  color: #001E2B;
}

.emotion-15:hover,
.emotion-15[data-hover="true"],
.emotion-15:active,
.emotion-15[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-15:focus-visible,
.emotion-15[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-15:focus,
.emotion-15:focus-visible,
.emotion-15:hover {
  z-index: 1;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:focus,
.emotion-15:focus-visible,
.emotion-15:active {
  border-left-color: #889397;
}

.emotion-15 svg {
  color: #3D4F58;
}

.emotion-18 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #001E2B;
  height: 16px;
  width: 16px;
  justify-self: right;
}

.emotion-18 .lg-ui-button-0000:hover,
.emotion-18 .lg-ui-button-0000:active {
  color: currentColor;
}

.emotion-19 {
  display: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 1
              <a
                class="headerlink heading"
                href="#step-1"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:r2:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-1"
                />
              </a>
            </h1>
            <div
              class="emotion-10"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-11"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-14"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-18"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-19"
              />
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 1
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 2
              <a
                class="headerlink heading"
                href="#step-2"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:r7:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-2"
                />
              </a>
            </h1>
            <div
              class="emotion-10"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-11"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-14"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-18"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-19"
              />
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 2
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          3
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 3
              <a
                class="headerlink heading"
                href="#step-3"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:rc:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-3"
                />
              </a>
            </h1>
            <div
              class="emotion-10"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-11"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-14"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-18"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-19"
              />
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 3
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          4
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 4
              <a
                class="headerlink heading"
                href="#step-4"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:rh:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-4"
                />
              </a>
            </h1>
            <div
              class="emotion-10"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-11"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-14"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-18"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-19"
              />
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 4
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          5
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 5
              <a
                class="headerlink heading"
                href="#step-5"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:rm:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-5"
                />
              </a>
            </h1>
            <div
              class="emotion-10"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-11"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-14"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-18"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-19"
              />
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 5
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          6
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 6
              <a
                class="headerlink heading"
                href="#step-6"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:rr:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-6"
                />
              </a>
            </h1>
            <div
              class="emotion-10"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-11"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-14"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-18"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-19"
              />
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 6
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          7
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 7
              <a
                class="headerlink heading"
                href="#step-7"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:r10:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-7"
                />
              </a>
            </h1>
            <div
              class="emotion-10"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-11"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-14"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-18"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-19"
              />
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 7
          </p>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

.emotion-1 {
  gap: 16px;
}

.emotion-1 h2,
.emotion-1 h4,
.emotion-1 h5,
.emotion-1 h6 {
  margin-top: unset;
}

.emotion-1 h3 {
  margin-top: 2px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  border: 1.5px solid #C1C7C6;
  font-weight: 500;
  font-size: 16px;
  line-height: 28px;
  background-color: inherit;
  color: var(--opposite-color);
  height: 27px;
  width: 27px;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 section>*,
.emotion-6 ol p,
.emotion-6 ul p {
  margin-bottom: 16px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          <a
            class="link"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          <a
            class="link"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
